--- a/introduccion.html
+++ b/introduccion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" style="">
+<html lang="es" >
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@ ul.list-group.list-group-flush.mb-4 {
     width: auto;
     margin: 0 150px 20px  183px;
 }</style>
-<body style="">
+<body >
     <section>
         <div class="container my-5">
             <!-- Section Header -->
